Fixing site for mobile

--- a/resources/index.html
+++ b/resources/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
     <title>Your Choice Family Health &amp; Wellness</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <meta name="description" content="Helping you through Lifestyle, Excercise, Attitude, Nutrition">
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+    <script async src="/js/nh.min.js"></script>
 
     <!--[if lte IE 8]>
     <script>
@@ -16,76 +18,66 @@
     </script>
     <![endif]-->
 
-    <!--
-<script type="text/javascript">
-    if (screen.width <= 800) {
-        window.location = "http://m.nellieharden.com";
-    }
-
-    </script>
--->
-    <!--
-        <script async src="/js/pw.min.js"></script>
-    -->
-    <script src="/js_raw/jquery-3.1.0.min.js"></script>
-    <script src="/js_raw/script.js"></script>
 </head>
+
 <body>
-<div class="header"></div>
-<div class="title"></div>
-<div class="content">
-    <div id="resources">
-        <div class="background_opacity_50">
-            <img src="/img/conch.png">
+<div id="banner"></div>
+<div id="container">
+    <div id="header"></div>
+    <div id="page">
+
+        <div id="resources">
+            <div class="background_opacity_50">
+                <img class="background_img" src="/img/conch.png">
+            </div>
+            My story of health and wellness and why Juice Plus+ is the only product I recommend in my
+            health coaching business.<br/>
+            <a href="https://www.voxer.com/v/5ea65f7886" target="_blank">Listen Here</a><br/><br/>
+
+            Healthy and Delicious Cookbook and Children’s Health book! Great for the whole family!<br/>
+            <a href="http://www.healthylivingrevolution.com" target="_blank">www.healthylivingrevolution.com</a><br/><br/>
+
+            Why is Juice Plus+ the catalyst to so much change in your life? Why do I have it be step #1 with
+            all of my health coach clients?<br/>
+            It all comes down to research:<br/>
+            <a href="https://www.dropbox.com/s/c278zivfagni6ky/BEST%20Research%20Overview%20Update%2C%20Nov%202015.pdf?dl=0" target="_blank">Research Report</a><br/><br/>
+
+            Learn more about all Juice Plus, Complete and Tower Garden has to offer:<br/>
+            <a href="http://www.jpstartup.com" target="_blank">http://www.jpstartup.com</a><br/>
+
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=CI2h_vsAQZA&;index=2&;list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ" target="_blank">Juice Plus+</a></li>
+                <li><a href="https://www.youtube.com/watch?v=8Fu8TuziPQ4&;list=PLILUc2Yn7OGC4LCg8Juqe0dnkxSIzyv9L&;index=6" target="_blank">Children’s Health</a></li>
+                <li><a href="https://www.youtube.com/watch?v=iB0X6BEnz0A&;index=1&;list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ" target="_blank">Complete</a></li>
+                <li><a href="https://www.youtube.com/watch?v=Rib6yl3Wszg&;index=1&;list=PLILUc2Yn7OGATivYxN5G0V59URBJByIzV&;t=26s" target="_blank">Tower Garden</a></li>
+            </ul>
+
+            Are you looking for a specific interest? Maybe you will find it here!<br/>
+            <a href="http://www.jpstartup.com/new-page-2/" target="_blank">Video Library</a><br/><br/>
+
+            If you would like to sit down and see if joining my coast to coast team is something that would
+            be a good fit for both you and this team I would be happy to.<br/>
+            <a href="http://www.jpstartup.com/who-we-are-1-1-1/" target="_blank">Franchising</a><br/><br/>
+
+            The SHRED10 PROGRAM is what I use for clients to tie in nutritional support and lifestyle
+            changes for 10 days of each month. Some clients join us every month and some join and then
+            take a few off and join in again! This is a non food limiting detox that is all about shredding bad
+            habits and increasing great habits!<br/>
+
+            <ul>
+                <li><a href="http://www.intro.shred10.com" target="_blank">3 minute overview</a></li>
+                <li><a href="http://www.info.shred10.com" target="_blank">20 minute more in depth review</a></li>
+                <li><a href="https://www.youtube.com/watch?v=x60khv-Njuc&;feature=youtu.be" target="_blank">Recorded Live presentation of the Shred10 program</a></li>
+            </ul>
+
+            **This is just a small portion of the resources I have access to and am able to help with and I
+            would love to set up a meeting with you to discuss what are the possible and proper next steps
+            for you and your family.
         </div>
-        My story of health and wellness and why Juice Plus+ is the only product I recommend in my
-        health coaching business.<br/>
-        <a href="https://www.voxer.com/v/5ea65f7886" target="_blank">Listen Here</a><br/><br/>
-
-        Healthy and Delicious Cookbook and Children’s Health book! Great for the whole family!<br/>
-        <a href="http://www.healthylivingrevolution.com" target="_blank">www.healthylivingrevolution.com</a><br/><br/>
-
-        Why is Juice Plus+ the catalyst to so much change in your life? Why do I have it be step #1 with
-        all of my health coach clients?<br/>
-        It all comes down to research:<br/>
-        <a href="https://www.dropbox.com/s/c278zivfagni6ky/BEST%20Research%20Overview%20Update%2C%20Nov%202015.pdf?dl=0" target="_blank">Research Report</a><br/><br/>
-
-        Learn more about all Juice Plus, Complete and Tower Garden has to offer:<br/>
-        <a href="http://www.jpstartup.com" target="_blank">http://www.jpstartup.com</a><br/>
-
-        <ul>
-            <li><a href="https://www.youtube.com/watch?v=CI2h_vsAQZA&;index=2&;list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ" target="_blank">Juice Plus+</a></li>
-            <li><a href="https://www.youtube.com/watch?v=8Fu8TuziPQ4&;list=PLILUc2Yn7OGC4LCg8Juqe0dnkxSIzyv9L&;index=6" target="_blank">Children’s Health</a></li>
-            <li><a href="https://www.youtube.com/watch?v=iB0X6BEnz0A&;index=1&;list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ" target="_blank">Complete</a></li>
-            <li><a href="https://www.youtube.com/watch?v=Rib6yl3Wszg&;index=1&;list=PLILUc2Yn7OGATivYxN5G0V59URBJByIzV&;t=26s" target="_blank">Tower Garden</a></li>
-        </ul>
-
-        Are you looking for a specific interest? Maybe you will find it here!<br/>
-        <a href="http://www.jpstartup.com/new-page-2/" target="_blank">Video Library</a><br/><br/>
-
-        If you would like to sit down and see if joining my coast to coast team is something that would
-        be a good fit for both you and this team I would be happy to.<br/>
-        <a href="http://www.jpstartup.com/who-we-are-1-1-1/" target="_blank">Franchising</a><br/><br/>
-
-        The SHRED10 PROGRAM is what I use for clients to tie in nutritional support and lifestyle
-        changes for 10 days of each month. Some clients join us every month and some join and then
-        take a few off and join in again! This is a non food limiting detox that is all about shredding bad
-        habits and increasing great habits!<br/>
-
-        <ul>
-            <li><a href="http://www.intro.shred10.com" target="_blank">3 minute overview</a></li>
-            <li><a href="http://www.info.shred10.com" target="_blank">20 minute more in depth review</a></li>
-            <li><a href="https://www.youtube.com/watch?v=x60khv-Njuc&;feature=youtu.be" target="_blank">Recorded Live presentation of the Shred10 program</a></li>
-        </ul>
-
-        **This is just a small portion of the resources I have access to and am able to help with and I
-        would love to set up a meeting with you to discuss what are the possible and proper next steps
-        for you and your family.
-    </div>
-    <div class="banner">
 
     </div>
+    <div id="bottom_border"></div>
+    <div id="footer"></div>
 </div>
-<div class="footer"></div>
 </body>
 </html>
