--- a/contact/index.html
+++ b/contact/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
     <title>Your Choice Family Health &amp; Wellness</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <meta name="description" content="Helping you through Lifestyle, Excercise, Attitude, Nutrition">
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+    <script async src="/js/nh.min.js"></script>
 
     <!--[if lte IE 8]>
     <script>
@@ -16,44 +18,34 @@
     </script>
     <![endif]-->
 
-    <!--
-<script type="text/javascript">
-    if (screen.width <= 800) {
-        window.location = "http://m.nellieharden.com";
-    }
-
-    </script>
--->
-    <!--
-        <script async src="/js/pw.min.js"></script>
-    -->
-    <script src="/js_raw/jquery-3.1.0.min.js"></script>
-    <script src="/js_raw/script.js"></script>
 </head>
+
 <body>
-<div class="header"></div>
-<div class="title"></div>
-<div class="content">
-    <div id="contact">
-        <img src="/img/talking.png">
+<div id="banner"></div>
+<div id="container">
+    <div id="header"></div>
+    <div id="page">
 
-        For any inquiries or to setup a consultation:<br/>
-        Phone: 630.939.1591<br/>
-        Email: <a href="mailto:nellie.a.harden@gmail.com?Subject=Please%20send%20me%20more%20information" target="_blank">nellie.a.harden@gmail.com</a>
-        <br/><br/>
-        Facebook: <a href="https://www.facebook.com/nellie.harden" target="_blank">https://www.facebook.com/nellie.harden</a>
-        <br/><br/>
-        To Order Your Juice Plus or Complete:<br/>
-        <a href="http://www.nharden.juiceplus.com" target="_blank">http://www.nharden.juiceplus.com</a><br/>
-        *** if you have a child between 4 and full time college student or special needs adult please consult with me about a free program we can get you involved in!
-        <br/><br/>
-        To Order Your Tower Garden:
-        <a href="http://www.nharden.towergarden.com" target="_blank">http://www.nharden.towergarden.com</a>
-    </div>
-    <div class="banner">
+        <div id="contact">
+            <img src="/img/talking.png">
+
+            For any inquiries or to setup a consultation:<br/>
+            Phone: 630.939.1591<br/>
+            Email: <a href="mailto:nellie.a.harden@gmail.com?Subject=Please%20send%20me%20more%20information" target="_blank">nellie.a.harden@gmail.com</a>
+            <br/><br/>
+            Facebook: <a href="https://www.facebook.com/nellie.harden" target="_blank">https://www.facebook.com/nellie.harden</a>
+            <br/><br/>
+            To Order Your Juice Plus or Complete:<br/>
+            <a href="http://www.nharden.juiceplus.com" target="_blank">http://www.nharden.juiceplus.com</a><br/>
+            *** if you have a child between 4 and full time college student or special needs adult please consult with me about a free program we can get you involved in!
+            <br/><br/>
+            To Order Your Tower Garden:
+            <a href="http://www.nharden.towergarden.com" target="_blank">http://www.nharden.towergarden.com</a>
+        </div>
 
     </div>
+    <div id="bottom_border"></div>
+    <div id="footer"></div>
 </div>
-<div class="footer"></div>
 </body>
 </html>
