--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
     <title>Your Choice Family Health &amp; Wellness</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Helping you through Lifestyle, Excercise, Attitude, Nutrition">
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+    <script async src="/js/nh.min.js"></script>
 
-    <link rel="stylesheet" href="/css/responsive-nav.css">
-    <script src="/js_raw/responsive-nav.js"></script>
 
     <!--[if lte IE 8]>
     <script>
@@ -20,46 +19,16 @@
     </script>
     <![endif]-->
 
-    <!--
-<script type="text/javascript">
-    if (screen.width <= 800) {
-        window.location = "http://m.nellieharden.com";
-    }
-
-    </script>
--->
-<!--
-    <script async src="/js/pw.min.js"></script>
--->
-        <script src="/js_raw/jquery-3.1.0.min.js"></script>
-        <script src="/js_raw/script.js"></script>
 </head>
+
+
 <body>
-    <div class="header"></div>
-    <div class="title">
-        <div id="logo">
-            <a class="fusion-logo-link" href="http://www.nellieharden.com">
-                <img src="/img/NellieHardenLogo.jpg" width="360px" height="122px" alt="Nellie Harden, Certified Health Coach">
-            </a>
-        </div>
-        <div id="menu">
-
-            <div id="nav" class="nav-collapse">
-                <ul>
-                    <li><a href="/"><span class="menu-text">Home</span></a></li>
-                    <li><a href="/about/"><span class="menu-text">About</span></a></li>
-                    <li><a href="/services/"><span class="menu-text">Services</span></a></li>
-                    <li><a href="/resources/"><span class="menu-text">Resources</span></a></li>
-                    <li><a href="/blog/"><span class="menu-text">Blog</span></a></li>
-                    <li><a href="/contact/"><span class="menu-text">Contact</span></a></li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-    <div class="content">
+<div id="banner"></div>
+<div id="container">
+    <div id="header"></div>
+    <div id="page">
         <div id="main_pic">
-            <img src="/img/home_img.jpg" width="940px" height="355px">
+            <img src="/img/home_img.jpg" width="100%" >
         </div>
         <div id="life_goals">
             <p class="cntr font-sans-light">Let’s go past the diets, contradictions and information overload and simply begin an amazing
@@ -87,33 +56,10 @@
                 </p>
             </div>
         </div>
-        <div class="banner">
 
-        </div>
     </div>
-    <div class="footer"></div>
-
-
-    <script>
-        // Init responsive-nav.js
-        var nav = responsiveNav("#.nav-collapse");
-/*
-        var nav = responsiveNav(".nav-collapse", { // Selector
-            animate: true, // Boolean: Use CSS3 transitions, true or false
-            transition: 284, // Integer: Speed of the transition, in milliseconds
-            label: "Menu", // String: Label for the navigation toggle
-            insert: "before", // String: Insert the toggle before or after the navigation
-            customToggle: "", // Selector: Specify the ID of a custom toggle
-            closeOnNavClick: false, // Boolean: Close the navigation when one of the links are clicked
-            openPos: "relative", // String: Position of the opened nav, relative or static
-            navClass: "nav-collapse", // String: Default CSS class. If changed, you need to edit the CSS too!
-            navActiveClass: "js-nav-active", // String: Class that is added to  element when nav is active
-            jsClass: "js", // String: 'JS enabled' class which is added to  element
-            init: function(){}, // Function: Init callback
-            open: function(){}, // Function: Open callback
-            close: function(){} // Function: Close callback
-        });
-*/
-    </script>
+    <div id="bottom_border"></div>
+    <div id="footer"></div>
+</div>
 </body>
 </html>
