--- a/title.html
+++ b/title.html
@@ -1,11 +1,11 @@
 <div id="logo">
-    <a class="fusion-logo-link" href="http://www.nellieharden.com">
-        <img src="/img/NellieHardenLogo.jpg" width="360" height="122" alt="Nellie Harden, Certified Health Coach">
+    <a href="http://www.nellieharden.com">
+        <img src="/img/NellieHardenLogo.jpg" width="100%" alt="Nellie Harden, Certified Health Coach">
     </a>
 </div>
 <div id="menu">
 
-    <nav class="nav-collapse">
+    <div id="nav" class="nav-collapse">
         <ul>
             <li><a href="/"><span class="menu-text">Home</span></a></li>
             <li><a href="/about/"><span class="menu-text">About</span></a></li>
@@ -14,6 +14,6 @@
             <li><a href="/blog/"><span class="menu-text">Blog</span></a></li>
             <li><a href="/contact/"><span class="menu-text">Contact</span></a></li>
         </ul>
-    </nav>
+    </div>
 
 </div>
