--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css" media="screen">
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css" media="screen">
     <script async src="/js/nh.min.js"></script>
 
 
@@ -31,29 +31,44 @@
             <img src="/img/home_img.jpg" width="100%" >
         </div>
         <div id="life_goals">
-            <p class="cntr font-sans-light">Let’s go past the diets, contradictions and information overload and simply begin an amazing
-                journey together toward a <span class="teal">healthier, happier and more energized life</span></p>
+            <p class="cntr font-sans-light">Connecting people with tools and resources to live their best lives</p>
             <div class="indent">
-                <p class="bullet">
-                    <i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i>
-                    Learn how to <strong><span style="color: #444;">fuel your body</span></strong> in the best way for you
-                </p>
-                <p class="bullet">
-                    <i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i>
-                    Get <strong><span style="color: #444;">tools &amp; techniques</span></strong> to help you and your family meet your wellness goals
-                </p>
-                <p class="bullet">
-                    <i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i>
-                    Receive <strong><span style="color: #444;">education and resources</span></strong> available to you.
-                </p>
-                <p class="bullet">
-                    <i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i>
-                    Be <strong><span style="color: #444;">encouraged and nurtured</span></strong> as you grow into the best version of you
-                </p>
-                <p class="bullet">
-                    <i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i>
-                    <strong><span style="color: #444;">Maintain wellness</span></strong> while juggling life
-                </p>
+                <table width="100%">
+                    <tr>
+                        <td colspan="7" class="cntr"><span class="font-sans-light underln">4 Pillars of Wellness</span></td>
+                    </tr>
+                    <tr class="bullet">
+                        <td class="cntr pillar">Nutrition</td>
+                        <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
+                        <td class="cntr pillar">Movement</td>
+                        <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
+                        <td class="cntr pillar">Sleep/Rest</td>
+                        <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
+                        <td class="cntr pillar">Stress Management</td>
+                    </tr>
+                </table>
+                <table width="100%">
+                    <tr>
+                        <td colspan="5" class="cntr"><span class="font-sans-light underln">3 Life Freedoms</span></td>
+                    </tr>
+                    <tr class="bullet">
+                        <td class="cntr freedom">Time  Freedom</td>
+                        <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
+                        <td class="cntr freedom">Financial Freedom</td>
+                        <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
+                        <td class="cntr freedom">Wellness Freedom</td>
+                    </tr>
+                </table>
+                <table width="100%">
+                    <tr>
+                        <td colspan="3" class="cntr"><span class="font-sans-light underln">Global Impact and Legacy</span></td>
+                    </tr>
+                    <tr class="bullet">
+                        <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
+                        <td class="cntr legacy">Improving the World We Live In</td>
+                        <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
+                    </tr>
+                </table>
             </div>
         </div>
 
