--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div id="logo">
     <a href="http://www.nellieharden.com">
-        <img src="/img/NellieHardenLogo.jpg" width="100%" alt="Nellie Harden, Certified Health Coach">
+        <img src="/img/logo2.png" width="100%" alt="Nellie Harden, Certified Health Coach">
     </a>
 </div>
 <div id="menu">
