--- a/resources/index.html
+++ b/resources/index.html
@@ -8,8 +8,8 @@
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css" media="screen">
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css" media="screen">
     <script async src="/js/nh.min.js"></script>
 
     <!--[if lte IE 8]>
