--- a/services/index.html
+++ b/services/index.html
@@ -8,8 +8,8 @@
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css" media="screen">
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css" media="screen">
     <script async src="/js/nh.min.js"></script>
 
     <!--[if lte IE 8]>
@@ -31,22 +31,22 @@
                 <img class="background_img" src="/img/shell.png">
             </div>
             <p id="how_step"><strong>How Can I Help you with your next step?</strong></p>
-            <p id="five_doors"><strong><span style="color: #444;">There are 5 doors through which I can help you start achieving a
+            <p id="five_doors"><strong><span class="dark_grey">There are 5 doors through which I can help you start achieving a
             Healthy Living Revolution:</span></strong></p>
             <ol type="1">
                 <li>Adding value to your life through:</li>
                 <ol type="a">
-                    <li class="top_5"><strong><span style="color: #444;">Educational experiences</span></strong> done by myself and inviting you to hear other experts and do fun events in the area.</li>
-                    <li class="top_5">Coming to your home and doing a <strong><span style="color: #444;">pantry makeover</span></strong> to specifically focus on your home, family needs, habits, wants and next steps.  (please ask about pricing)</li>
-                    <li class="top_5">Do a <strong><span style="color: #444;">grocery store shopping trip</span></strong> with you and help you buy more effectively for your spending and on your budget. (please ask about pricing)</li>
-                    <li class="top_5">Help your attitude improve with settling the chaos on the outside with <strong><span style="color: #444;">organization of home or office</span></strong>. (please ask about pricing)</li>
+                    <li class="top_5"><strong><span class="dark_grey">Educational experiences</span></strong> done by myself and inviting you to hear other experts and do fun events in the area.</li>
+                    <li class="top_5">Coming to your home and doing a <strong><span class="dark_grey">pantry makeover</span></strong> to specifically focus on your home, family needs, habits, wants and next steps.  (please ask about pricing)</li>
+                    <li class="top_5">Do a <strong><span class="dark_grey">grocery store shopping trip</span></strong> with you and help you buy more effectively for your spending and on your budget. (please ask about pricing)</li>
+                    <li class="top_5">Help your attitude improve with settling the chaos on the outside with <strong><span class="dark_grey">organization of home or office</span></strong>. (please ask about pricing)</li>
                 </ol>
-                <li class="top_20">Help you get started with the MICROnutrition of <strong><span style="color: #444;">Juice Plus+</span></strong> capsules and chewables.  Don’t forget the kids eat free program!</li>
-                <li class="top_20">Help you get started with the MACROnutrient <strong><span style="color: #444;">Complete Shakes and/or Complete Bars</span></strong>.</li>
-                <li class="top_20">Grow your own produce on an aeroponic indoor/outdoor <strong><span style="color: #444;">Tower Garden</span></strong>!</li>
-                <li class="top_20">Get you started on the <strong><span style="color: #444;">Shred10 program</span></strong> to shred toxins and bad habits while increasing good habits with an amazing community of people all walking with you for 10 days toward better health!</li>
+                <li class="top_20">Help you get started with the MICROnutrition of <strong><span class="dark_grey">Juice Plus+</span></strong> capsules and chewables.  Don’t forget the kids eat free program!</li>
+                <li class="top_20">Help you get started with the MACROnutrient <strong><span class="dark_grey">Complete Shakes and/or Complete Bars</span></strong>.</li>
+                <li class="top_20">Grow your own produce on an aeroponic indoor/outdoor <strong><span class="dark_grey">Tower Garden</span></strong>!</li>
+                <li class="top_20">Get you started on the <strong><span class="dark_grey">Shred10 program</span></strong> to shred toxins and bad habits while increasing good habits with an amazing community of people all walking with you for 10 days toward better health!</li>
                 <ol type="a">
-                    <li class="top_5">Please go to <a href="http://www.info.shred10.com" target="_blank">www.info.shred10.com</a> for all the details.  I can get you started today or contact me anytime.  <strong><span style="color: #444;">I run a group every month!</span></strong></li>
+                    <li class="top_5">Please go to <a href="http://www.info.shred10.com" target="_blank">www.info.shred10.com</a> for all the details.  I can get you started today or contact me anytime.  <strong><span class="dark_grey">I run a group every month!</span></strong></li>
                 </ol>
             </ol>
             <div class="cntr red_text">*** Please see resources tab for more information. ***</div>
