Updating a little more

--- a/contact/index.html
+++ b/contact/index.html
@@ -35,12 +35,8 @@
             <br/><br/>
             Facebook: <a href="https://www.facebook.com/nellie.harden" target="_blank">https://www.facebook.com/nellie.harden</a>
             <br/><br/>
-            To Order Your Juice Plus or Complete:<br/>
-            <a href="http://www.nharden.juiceplus.com" target="_blank">http://www.nharden.juiceplus.com</a><br/>
-            *** if you have a child between 4 and full time college student or special needs adult please consult with me about a free program we can get you involved in!
-            <br/><br/>
-            To Order Your Tower Garden:
-            <a href="http://www.nharden.towergarden.com" target="_blank">http://www.nharden.towergarden.com</a>
+            Instagram: @NellieHarden
+            <br/><br/><br/>
         </div>
 
     </div>
