--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <div id="header"></div>
     <div id="page">
         <div id="main_pic">
-            <img src="/img/home_img.jpg" width="100%" >
+            <img src="/img/home_img_2.png" width="100%" >
         </div>
         <div id="life_goals">
             <p class="cntr font-sans-light">Connecting people with tools and resources to live their best lives</p>
             <div class="indent">
                 <table width="100%">
                     <tr>
-                        <td colspan="7" class="cntr"><span class="font-sans-light underln">4 Pillars of Wellness</span></td>
+                        <td colspan="7" class="cntr"><span class="font-sans-light underln heavy">4 Pillars of Wellness</span></td>
                     </tr>
                     <tr class="bullet">
                         <td class="cntr pillar">Nutrition</td>
@@ -49,7 +49,7 @@
                 </table>
                 <table width="100%">
                     <tr>
-                        <td colspan="5" class="cntr"><span class="font-sans-light underln">3 Life Freedoms</span></td>
+                        <td colspan="5" class="cntr"><span class="font-sans-light underln heavy">3 Life Freedoms</span></td>
                     </tr>
                     <tr class="bullet">
                         <td class="cntr freedom">Time  Freedom</td>
@@ -61,7 +61,7 @@
                 </table>
                 <table width="100%">
                     <tr>
-                        <td colspan="3" class="cntr"><span class="font-sans-light underln">Global Impact and Legacy</span></td>
+                        <td colspan="3" class="cntr"><span class="font-sans-light underln heavy">Global Impact and Legacy</span></td>
                     </tr>
                     <tr class="bullet">
                         <td class="cntr"><i class="fa fontawesome-icon size-medium medium circle-no fa-anchor"></i></td>
