Updating For Nellie

--- a/contact/index.html
+++ b/contact/index.html
@@ -37,6 +37,7 @@
             <br/><br/>
             Instagram: @NellieHarden
             <br/><br/><br/>
+            I am looking forward to stepping into your story and helping your achieve your needs, wants and dreams!
         </div>
 
     </div>
