--- a/resources/index.html
+++ b/resources/index.html
@@ -30,49 +30,51 @@
             <div class="background_opacity_50">
                 <img class="background_img" src="/img/conch.png">
             </div>
-            My story of health and wellness and why Juice Plus+ is the only product I recommend in my
-            health coaching business.<br/>
-            <a href="https://www.voxer.com/v/5ea65f7886" target="_blank">Listen Here</a><br/><br/>
+            This is just a small portion of resources, but they are some of my favorites!  It is best to connect with me so we can discuss your specific wants and needs
+            <br/><br/>
 
-            Healthy and Delicious Cookbook and Children’s Health book! Great for the whole family!<br/>
-            <a href="http://www.healthylivingrevolution.com" target="_blank">www.healthylivingrevolution.com</a><br/><br/>
+            <a href="http://www.healthylivingrevolution.com" target="_blank">Healthy Living Revolution</a> - Healthy and Delicious Cookbook and Children’s Health book! Great for the whole family!
+            <br/><br/>
 
-            Why is Juice Plus+ the catalyst to so much change in your life? Why do I have it be step #1 with
-            all of my health coach clients?<br/>
-            It all comes down to research:<br/>
-            <a href="https://www.dropbox.com/s/c278zivfagni6ky/BEST%20Research%20Overview%20Update%2C%20Nov%202015.pdf?dl=0" target="_blank">Research Report</a><br/><br/>
+            <a href="http://www.thefreedomrevolution.com/" target="_blank">Freedom Revolution</a> - explore the mission, support and freedom of our community
+            <br/><br/>
 
-            Learn more about all Juice Plus, Complete and Tower Garden has to offer:<br/>
-            <a href="http://www.jpstartup.com" target="_blank">http://www.jpstartup.com</a><br/>
+            If you are a science lover you will love the almost 20 years of science behind one of my favorite tools, Juice Plus, which is concentrated fruits, vegetables and berries!
+            <br/>
+            <a href="https://www.dropbox.com/s/c278zivfagni6ky/BEST%20Research%20Overview%20Update%2C%20Nov%202015.pdf?dl=0" target="_blank">Research Report</a>
+            <br/><br/><br/>
 
+
+            Children’s Wellness!
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=CI2h_vsAQZA&;index=2&;list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ" target="_blank">Juice Plus+</a></li>
                 <li><a href="https://www.youtube.com/watch?v=8Fu8TuziPQ4&;list=PLILUc2Yn7OGC4LCg8Juqe0dnkxSIzyv9L&;index=6" target="_blank">Children’s Health</a></li>
+                <li><a href="https://www.youtube.com/watch?v=e-FO8RmhY8U&t=0s&list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ&index=21" target="_blank">Kids at Play</a></li>
+                <li><a href="https://www.youtube.com/watch?v=gCkVcJ-7jl8&index=35&list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ" target="_blank">Children’s Health Study</a></li>
+            </ul>
+            <br/>
+
+            Other tools I know and love!
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=iB0X6BEnz0A&;index=1&;list=PLILUc2Yn7OGAlMaeoc4h9KGGH2gcMepjJ" target="_blank">Complete</a></li>
                 <li><a href="https://www.youtube.com/watch?v=Rib6yl3Wszg&;index=1&;list=PLILUc2Yn7OGATivYxN5G0V59URBJByIzV&;t=26s" target="_blank">Tower Garden</a></li>
+                <li><a href="https://www.youtube.com/watch?v=MzH5uMb-ER8&t=68s" target="_blank">Plant Based Full Spectrum Omega</a></li>
             </ul>
+            <br/>
 
-            Are you looking for a specific interest? Maybe you will find it here!<br/>
-            <a href="http://www.jpstartup.com/new-page-2/" target="_blank">Video Library</a><br/><br/>
-
-            If you would like to sit down and see if joining my coast to coast team is something that would
-            be a good fit for both you and this team I would be happy to.<br/>
-            <a href="http://www.jpstartup.com/who-we-are-1-1-1/" target="_blank">Franchising</a><br/><br/>
-
-            The SHRED10 PROGRAM is what I use for clients to tie in nutritional support and lifestyle
-            changes for 10 days of each month. Some clients join us every month and some join and then
-            take a few off and join in again! This is a non food limiting detox that is all about shredding bad
-            habits and increasing great habits!<br/>
-
+            The Program that has everything that will change your wellness for the better and create long standing positive behavioral and wellness changes…
             <ul>
-                <li><a href="http://www.intro.shred10.com" target="_blank">3 minute overview</a></li>
-                <li><a href="http://www.info.shred10.com" target="_blank">20 minute more in depth review</a></li>
-                <li><a href="https://www.youtube.com/watch?v=x60khv-Njuc&;feature=youtu.be" target="_blank">Recorded Live presentation of the Shred10 program</a></li>
+                <li><a href="http://www.shred10.com/" target="_blank">Shred10</a></li>
             </ul>
+            <br/>
 
-            **This is just a small portion of the resources I have access to and am able to help with and I
-            would love to set up a meeting with you to discuss what are the possible and proper next steps
-            for you and your family.
+            Other great resources to check out!
+            <ul>
+                <li><a href="https://thrivemarket.com/myaisle/" target="_blank">Thrive Market</a></li>
+                <li><a href="https://try.purplecarrot.com/plant_based?utm_source=adwordsnb&utm_campaign=adwordsplant_21&gclid=CjwKCAiAyrXiBRAjEiwATI95mYJXVbnDoZD2tXDZgtQFuhS4fZlKYpOhjA1dOz5Zf5Nn7Dlj6ZRjHxoC374QAvD_BwE" target="_blank">Purple Carrot</a></li>
+                <li><a href="https://www.100daysofrealfood.com/" target="_blank">100 Days of Real Food</a></li>
+                <li><a href="https://www.askdrsears.com/" target="_blank">Ask Dr.Sears</a></li>
+                <li><a href="http://www.drmitraray.com/" target="_blank">Dr.Mitra Ray</a></li>
+            </ul>
         </div>
 
     </div>
