--- a/services/index.html
+++ b/services/index.html
@@ -30,26 +30,114 @@
             <div class="background_opacity_50">
                 <img class="background_img" src="/img/shell.png">
             </div>
-            <p id="how_step"><strong>How Can I Help you with your next step?</strong></p>
-            <p id="five_doors"><strong><span class="dark_grey">There are 5 doors through which I can help you start achieving a
-            Healthy Living Revolution:</span></strong></p>
-            <ol type="1">
-                <li>Adding value to your life through:</li>
-                <ol type="a">
-                    <li class="top_5"><strong><span class="dark_grey">Educational experiences</span></strong> done by myself and inviting you to hear other experts and do fun events in the area.</li>
-                    <li class="top_5">Coming to your home and doing a <strong><span class="dark_grey">pantry makeover</span></strong> to specifically focus on your home, family needs, habits, wants and next steps.  (please ask about pricing)</li>
-                    <li class="top_5">Do a <strong><span class="dark_grey">grocery store shopping trip</span></strong> with you and help you buy more effectively for your spending and on your budget. (please ask about pricing)</li>
-                    <li class="top_5">Help your attitude improve with settling the chaos on the outside with <strong><span class="dark_grey">organization of home or office</span></strong>. (please ask about pricing)</li>
-                </ol>
-                <li class="top_20">Help you get started with the MICROnutrition of <strong><span class="dark_grey">Juice Plus+</span></strong> capsules and chewables.  Don’t forget the kids eat free program!</li>
-                <li class="top_20">Help you get started with the MACROnutrient <strong><span class="dark_grey">Complete Shakes and/or Complete Bars</span></strong>.</li>
-                <li class="top_20">Grow your own produce on an aeroponic indoor/outdoor <strong><span class="dark_grey">Tower Garden</span></strong>!</li>
-                <li class="top_20">Get you started on the <strong><span class="dark_grey">Shred10 program</span></strong> to shred toxins and bad habits while increasing good habits with an amazing community of people all walking with you for 10 days toward better health!</li>
-                <ol type="a">
-                    <li class="top_5">Please go to <a href="http://www.info.shred10.com" target="_blank">www.info.shred10.com</a> for all the details.  I can get you started today or contact me anytime.  <strong><span class="dark_grey">I run a group every month!</span></strong></li>
-                </ol>
-            </ol>
-            <div class="cntr red_text">*** Please see resources tab for more information. ***</div>
+            <div class="connect">
+                <p id="connect_header">Let’s Connect!</p>
+                <p class="font_30"><a href="mailto:Nellie.A.Harden@gmail.com">Nellie.A.Harden@gmail.com</a></p>
+                <p class="font_30">630.939.1591</p>
+            </div>
+            <p id="mantra">I am called to do one thing and I am devoted to doing it very well, and that is helping our world through teaching and fostering wellness of self and our environment.</p>
+            <p id="five_doors"><strong><span class="dark_grey">I would love to add value and growth to your life through any or all of these areas:</span></strong></p>
+            <p class="service_title underln heavy">Wellness</p>
+            <ul>
+                <li>Live and Virtual EDUCATION experiences by a variety of wellness experts on a variety of topics.</li>
+                <li class="top_5">Personal pantry makeovers to specifically focus on your home and family needs.</li>
+                <li class="top_5">Group or Personal Grocery Store Tours to help you buy more effectively for your spending budget.</li>
+                <li class="top_5">Getting you involved in a world wide community in The Healthy Living Revolution.</li>
+                <li class="top_5">Help you understand nutrition and the role it plays in your life and introduce you to TOOLS that will help fill your nutritional gaps.</li>
+                <li class="top_5">Grow your own produce on an aeroponic indoor/outdoor garden!</li>
+                <li class="top_5">Provide RESOURCES for those facing wellness obstacles.</li>
+                <li class="top_5">Community Driven, Fun, Monthly Accountability and Support group for individuals and families devoted to making better choices to increase their total wellness.</li>
+            </ul>
+            <p class="service_title underln heavy">Life Freedoms</p>
+            <ul>
+                <li>I would love to help you open to the door to explore Life Freedoms and dream again.</li>
+                <ul>
+                    <li class="top_5">"When a person has their wellness, all other possibilities are open to them"</li>
+                    <li class="top_5">"You have 2 lives.  The first one and the one you have after you realize you only have the one life."</li>
+                    <li class="top_5">Financial stability, Amazing Community, Meaningful Mission, Time Freedom, Fun, Laughter, Perseverance and enriching Personal Growth.</li>
+                </ul>
+            </ul>
+            <p class="service_title underln heavy">Global Impact and Building Legacy</p>
+            <ul>
+                <li>Helping to contribute to a better world.</li>
+                <ul>
+                    <li class="top_5">Feeding Minds</li>
+                    <li class="top_5">Fueling Bodies</li>
+                    <li class="top_5">Fostering Communities</li>
+                    <li class="top_5">Volunteers of America</li>
+                    <li class="top_5">Children’s Hunger Fund</li>
+                    <li class="top_5">Boys and Girls Clubs</li>
+                    <li class="top_5">St. Jude</li>
+                    <li class="top_5">Environmental Conservation through <a href="www.seaglassstraws.com" target="_blank">www.SeaGlassStraws.com</a> and The Ocean Conservancy</li>
+                </ul>
+            </ul>
+            <div id="obstacles" class="cntr">
+                <p class="font_30 heavy">Common Wellness Obstacles:</p>
+                <p id="obstacles_list">This is a short list of the most common things people face today, but by no means a complete list.  Let me know what you would like more information about and lets start turning wellness around!</p>
+                <table>
+                    <tr>
+                        <td class="heavy underln">Common Chronic Family History:</td> <td class="heavy underln">VERY Common in Households:</td>
+                    </tr>
+                    <tr>
+                        <td>Cancer</td> <td>Weakened Immune System - Frequent Sickness</td>
+                    </tr>
+                    <tr>
+                        <td>Heart Disease</td> <td>Low Energy</td>
+                    </tr>
+                    <tr>
+                        <td>Diabetes</td> <td>Poor Sleep</td>
+                    </tr>
+                    <tr>
+                        <td>Stroke</td> <td>Regularity</td>
+                    </tr>
+                    <tr>
+                        <td>Alzheimer's</td> <td>Headaches</td>
+                    </tr>
+                    <tr>
+                        <td>High Cholesterol</td> <td>Inflammation</td>
+                    </tr>
+                    <tr>
+                        <td>Anxiety/Depression</td> <td></td>
+                    </tr>
+                    <tr>
+                        <td class="heavy underln top_20" colspan="2">VERY Common in Athletes:</td>
+                    </tr>
+                    <tr>
+                        <td>Injury</td> <td>Poor Recovery</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">Diminished Athletic Performance</td>
+                    </tr>
+                    <tr>
+                        <td class="heavy underln top_20" colspan="2">Common Family Conditions:</td>
+                    </tr>
+                    <tr>
+                        <td>ADHD</td> <td>Fertility Issues</td>
+                    </tr>
+                    <tr>
+                        <td>Asthma</td> <td>Arthritis</td>
+                    </tr>
+                    <tr>
+                        <td>Allergies</td> <td>Thyroid Issues</td>
+                    </tr>
+                    <tr>
+                        <td>Auto Immune Conditions</td> <td>Skin Conditions - Eczema/Acne</td>
+                    </tr>
+                    <tr>
+                        <td>ISB</td> <td>Gum Disease</td>
+                    </tr>
+                    <tr>
+                        <td>Crohn's</td> <td>Obesity</td>
+                    </tr>
+                    <tr>
+                        <td>Colitis</td> <td>Migraines</td>
+                    </tr>
+                </table>
+            </div>
+            <div id="mission" class="cntr top_20">
+                <p class="font_30 heavy">The Mission of Our Team of Wellness Warriors</p>
+                <p>Inspire through resources, tools, community, compassion and kindness.  Living and Sharing on purpose to heal the world and create life freedom one person at a time.</p>
+            </div>
         </div>
 
     </div>
